# CopilotAPI

./: .env.example  .gitignore  README.md  STREAMING_FIXES_GUIDE.md  STREAMING_MCP_README.md  pyproject.toml  test_streaming.py  test_streaming_mcp.py
app/: .env.example  __init__.py  main.py
app/client/: __init__.py  copilot.py  enhanced_copilot.py
app/config/: settings.py
app/utils/: logger.py  redis_manager.py  token.py
