[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-api"
version = "0.1.0"
description = "API for GitHub Copilot integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "aiohttp>=3.8.4",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
